# icestream-py

./: AGENTS.md  README.md  logger.py  main.py  pyproject.toml  pytest.ini
kafkaserver/: handler.py  messages.py  server.py
kafkaserver/handlers/: __init__.py  metadata.py
src/icestream/: __main__.py  utils.py
src/icestream/admin/: __init__.py  errors.py  schemas.py  services.py
src/icestream/alembic/: env.py
src/icestream/cache/: __init__.py  object_reads.py  read_through.py  segment_cache.py
src/icestream/compaction/: __init__.py  parquet_compactor.py  schema.py  types.py  wal_to_parquet.py  wal_to_topic_wal.py
src/icestream/config/: __init__.py
src/icestream/db/: __init__.py
src/icestream/kafkaserver/: consumer_group_liveness.py  handler.py  internal_offsets.py  internal_topics.py  producer_state.py  server.py  topic_backends.py  topic_wal_reads.py  types.py  utils.py
src/icestream/models/: __init__.py  consumer_groups.py
tests/: conftest.py  test_icestream_integration.py
tests/integration/: conftest.py  test_admin_rest_integration.py  test_consumer_group_integration.py  test_icestream_integration.py
tests/unit/: conftest.py  test_utils.py
tests/unit/admin/: test_api_contract.py  test_runtime_guardrails.py  test_services.py
tests/unit/cache/: test_segment_cache.py
tests/unit/compaction/: test_compactor_worker.py  test_parquet_compactor.py  test_wal_to_parquet_compactor.py  test_wal_to_topic_wal_compactor.py
tests/unit/kafkaserver/: test_api_versions.py  test_consumer_group_reaper.py  test_handler.py  (+4 more)
tests/utils/: seed.py  time.py
(+58 files in other folders)
