[project]
name = "icestream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.0",
    "pydantic>=2.11.0",
    "kio>=0.4.0",
    "sqlalchemy>=2.0.0",
    "structlog>=25.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
icestream = "icestream.__main__:main"
